--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 /laskarit/viikko2/Unicafe/target/
 /laskarit/viikko2/Unicafe/target
 /laskarit/viikko2/Unicafe/nbproject/
+/Sovellus/Hirsipuu/target/
+/Sovellus/Hirsipuu/nbproject/
