--- a/Sovellus/Hirsipuu/pom.xml
+++ b/Sovellus/Hirsipuu/pom.xml
@@ -12,6 +12,18 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>12.0.2</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>12.0.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -19,6 +31,16 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.3</version>
+                <configuration>
+                    <excludes>              
+                        <exclude>Hirsipuu/ui/**/*</exclude>
+                        <exclude>Hirsipuu.ui.*</exclude>
+                        <exclude>Hirsipuu.ui.Sovellus.java</exclude>
+                        <exclude>Hirsipuu/ui/Sovellus.java</exclude>
+                        <exclude>ui/**/*</exclude>
+                        <exclude>ui.*</exclude>   
+                    </excludes>                   
+                </configuration>
                 <executions>
                     <execution>
                         <id>default-prepare-agent</id>
@@ -27,6 +49,19 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.5</version>
             </plugin>
         </plugins>
     </build>
