--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@
 /laskarit/viikko2/Unicafe/nbproject/
 /Sovellus/Hirsipuu/target/
 /Sovellus/Hirsipuu/nbproject/
-/Sovellus/Hirsipuu/nbactions/
+/Sovellus/Hirsipuu/nbactions.xml
